# oci-shared-images

./: .gitignore  README.md  distrobox-export-1.8.1.2.patch  distrobox.ini  ocisictl  ocisictl-system.yaml  ocisictl.sh  ocisictl.yaml  pyproject.toml  show_img_layers.sh
.uvextras/: uvextras.yaml
.uvextras/scripts/: bluefin_ck.py  start.py
debian/: Containerfile.debian  Containerfile.img-dx
fedora/: Containerfile.fedora-dev-base  Containerfile.fedora-dev-code  Containerfile.fedora-dotnet  Containerfile.fedora-go  Containerfile.fedora-python  Containerfile.fedora-python314  Containerfile.fedora-zig  Containerfile.img-dx
ocisictl/: __main__.py  adapters.py  cli.py  models.py  rich.py  steps.py  utils.py
