[project]
name = "oci-shared-images"
version = "0.1.0"
description = "Bluefin - rely on OCI layer sharing for distrobox and devcontainer"
authors = [{ name = "Kevin McWhirter", email = "klmcw@yahoo.com" }]
dependencies = ["pyyaml>=6.0.2"]
requires-python = "==3.14.*"
readme = "README.md"
license = { text = "MIT" }


[project.optional-dependencies]
dev = [
    "autopep8>=2.3.2",
    "flake8>=7.2.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "types-PyYaml>=6.0.12.20250516",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
create.shell = "pdm sync --group dev"
create.help = "Create .venv"

start = "python -m ocisictl"

clean.shell = "find . -type d -name __pycache__ -exec rm -fr {} \\; 2>/dev/null;for d in ${TO_DEL};do echo $d;rm -fr $d;done"
clean.env = { TO_DEL = "build .coverage coverage.xml log .mypy_cache .pdm-build __pycache__ __pypackages__ .pytest_cache .tox" }
clean.help = "Clean build artifacts"
envclean.shell = "for d in ${TO_DEL};do echo $d;rm -fr $d;done"
envclean.env = { TO_DEL = ".venv" }
envclean.help = "Clean environment"
distclean.composite = ["clean", "envclean"]

gitignore.shell = "source ~/.local/.bash.d/gitignore.io; gi -s -- python >.gitignore;echo '\ndistrobox-export\n.pdm-python\n' >>.gitignore"
gitignore.help = "generate .gitignore"

flake8 = "flake8 ocisictl/"

mypy = "mypy ocisictl/"

test.composite = ["flake8", "mypy"] # "pytest"

pytest.cmd = "pytest"

testcov.cmd = "pytest --cov=ocisictl --cov-report xml:coverage.xml --cov-report term"
testcov.help = "Produce test coverage xml and term reports"

tox = "tox"

[tool.isort]
multi_line_output = 3
