[project]
name = "oci-shared-images"
version = "0.1.0"
description = "Bluefin - rely on OCI layer sharing for distrobox and devcontainer"
authors = [{ name = "Kevin McWhirter", email = "klmcw@yahoo.com" }]
dependencies = [
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
]
requires-python = "==3.14.*"
readme = "README.md"
license = { text = "MIT" }


[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "flake8>=7.3.0",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "types-PyYaml>=6.0.12.20250516",
]

[tool.isort]
multi_line_output = 3
